# sharesight.rs

./: .clippy.toml  .gitignore  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: continuous_integration.yml
crates/generate/: Cargo.toml
crates/sharesight-examples/: Cargo.toml
crates/sharesight-examples/src/: lib.rs
crates/sharesight-generate/: Cargo.toml
crates/sharesight-generate/assets/: api_data.json  api_data_2.json  api_data_3.json
crates/sharesight-generate/src/: api_data.rs  display.rs  main.rs
crates/sharesight-reqwest/: Cargo.toml
crates/sharesight-reqwest/src/: lib.rs
crates/sharesight-types/: Cargo.toml
crates/sharesight-types/src/: auth_types.rs  codes.rs  lib.rs  types.rs  types_prelude.rs
crates/types/: Cargo.toml
