[package]
name = "sharesight-generate"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.42"
clap = { version = "3.0", features = ["derive"] }
env_logger = "0.9.0"
heck = "0.3.3"
indexmap = "1.7.0"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_with = "1.9.4"
