[package]
name = "sharesight-generate"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.1", features = ["derive"] }
env_logger = "0.11.3"
heck = "0.5.0"
indexmap = "2.0.0"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.0.0"
