[package]
name = "sharesight-reqwest"
version = "0.18.0"
edition = "2018"
description = "A client that allows execution of sharesight-types using reqwest"
license = "MIT"
homepage = "https://github.com/markcatley/sharesight.rs"
repository = "https://github.com/markcatley/sharesight.rs"
documentation = "https://docs.rs/sharesight-reqwest/latest/sharesight_reqwest/"

[dependencies]
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sharesight-types = { path = "../sharesight-types", version = "0.18" }
thiserror = "1.0"
