[package]
name = "sharesight-reqwest"
version = "0.19.0"
edition = "2021"
description = "A client that allows execution of sharesight-types using reqwest"
license = "MIT"
homepage = "https://github.com/markcatley/sharesight.rs"
repository = "https://github.com/markcatley/sharesight.rs"
documentation = "https://docs.rs/sharesight-reqwest/latest/sharesight_reqwest/"

[dependencies]
aliri_clock = "0.1.4"
aliri_reqwest = "0.5.1"
aliri_tokens = "0.3.2"
log = "0.4"
predicates = "3.1.3"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.4.2", features = ["http2", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sharesight-types = { path = "../sharesight-types", version = "0.19" }
thiserror = "2.0"
